# SlicerBioFace3DLandmarking

./: CMakeLists.txt  LICENSE  README.md
AutomatedLandmarking/: AutomatedLandmarking.py  CMakeLists.txt
AutomatedLandmarking/Helpers/: fiducial_creation.py  landmarks_io.py  mesh_conversion.py
AutomatedLandmarking/Resources/: requirements.txt
AutomatedLandmarking/Resources/UI/: AutomatedLandmarking.ui
AutomatedLandmarking/Resources/mvcnn/: __init__.py  api.py
AutomatedLandmarking/Resources/mvcnn/deepmvlm/: api.py
AutomatedLandmarking/Resources/mvcnn/utils3d/: render3d.py
FaceStandardization/: FaceStandardization.py
FaceStandardization/Resources/: reference_landmarks.fcsv
FaceStandardization/Resources/UI/: FaceStandardization.ui
